// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly ellipse 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly g multiple selection 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly g single selection 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly image 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container"
      key="Replace With..."
      onClick={[Function]}
    >
      <button
        className="btn"
        id="replace_with"
        type="button"
      >
        <ReplaceIcon />
        Replace With...
      </button>
    </div>
    <div
      className="btn-container"
      key="ai_bg_removal"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="bg-removal"
        type="button"
      >
        <svgr-url
          className="icon"
        />
        ai_bg_removal
      </button>
    </div>
    <div
      className="btn-container half"
      key="Trace"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="trace"
        type="button"
      >
        <TraceIcon />
        Trace
      </button>
    </div>
    <div
      className="btn-container half"
      key="Grading"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="grading"
        type="button"
      >
        <GrayscaleIcon />
        Grading
      </button>
    </div>
    <div
      className="btn-container half"
      key="Sharpen"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="sharpen"
        type="button"
      >
        <SharpenIcon />
        Sharpen
      </button>
    </div>
    <div
      className="btn-container half"
      key="Crop"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="crop"
        type="button"
      >
        <CropIcon />
        Crop
      </button>
    </div>
    <div
      className="btn-container half"
      key="Bevel"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="bevel"
        type="button"
      >
        <BevelIcon />
        Bevel
      </button>
    </div>
    <div
      className="btn-container half"
      key="Invert"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="invert"
        type="button"
      >
        <svgr-url
          className="icon"
        />
        Invert
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
    <div
      className="btn-container half"
      key="Potrace"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="remove"
        type="button"
      >
        <svgr-url
          className="icon"
        />
        Potrace
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly line 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly no elements 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  />
</div>
`;

exports[`should render correctly path 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container"
      key="edit_path"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="edit_path"
        type="button"
      >
        <PenIcon />
        edit_path
      </button>
    </div>
    <div
      className="btn-container"
      key="Decompose"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="decompose_path"
        type="button"
      >
        <DivideIcon />
        Decompose
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
    <div
      className="btn-container"
      key="simplify"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="simplify"
        type="button"
      >
        <SimplifyIcon />
        simplify
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly polygon 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly rect 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly text 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly use 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container half"
      key="Disassemble"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="disassemble_use"
        type="button"
      >
        <SeparateIcon />
        Disassemble
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;
